endpoint for price history data added
