# App/python-server/external_apis/ext_apis.py
@@ -1,7 +1,7 @@
 from fastapi import APIRouter, Query
 from fastapi.responses import JSONResponse
 from datetime import datetime, timezone
-from services.ext_api_services import fetch_fingrid_data, fetch_weather_data, fetch_weather_data_range, fetch_fingrid_data_range
+from services.ext_api_services import fetch_fingrid_data, fetch_weather_data, fetch_fingrid_data_range, fetch_price_data_range
 from pydantic import BaseModel, Field, RootModel
 from typing import List
 import httpx
@@ -32,6 +32,10 @@ class WeatherDataPoint(BaseModel):
     temperature_celsius: float = Field(..., example=8.5)
     wind_speed_mps: float = Field(..., example=2.2)
     closest_forecast_time: str = Field(..., example="2025-05-09T16:00:00Z")
+
+class PriceData(BaseModel):
+    time: str = Field(..., example="2025-05-08T04:00:00.000Z")
+    price: float = Field(..., example=10.01)
 
 router = APIRouter()
 
@@ -128,6 +132,44 @@ async def post_production_range(time_range: TimeRangeRequest):
         end_time=time_range.endTime
     )
 
+@router.post("/api/public/weather", response_model=RootModel[WeatherDataPoint])
+async def post_weather(request: WeatherRequest):
+    """
+    Get weather forecast for a specific UTC time and location (POST version).
+    Fetches weather forecast data from the MET API.
+
+    Args:
+        request (WeatherRequest): Contains latitude, longitude, and timestamp in RFC 3339 format.
+
+    Returns:
+        dict: Weather forecast data or an error message.
+    """
+    try:
+        requested_dt = datetime.fromisoformat(request.timestamp.replace("Z", "+00:00")).replace(tzinfo=timezone.utc)
+        return await fetch_weather_data(request.lat, request.lon, requested_dt)
+    except ValueError:
+        return {"error": "Invalid timestamp format. Expected RFC 3339 format (e.g. 2024-05-05T13:30:00Z)"}
+
+
+
+@router.post("/api/public/price/range", response_model=List[PriceData])
+async def post_price_range(time_range: TimeRangeRequest):
+    """
+    Get price data for specific time range from Porssisahko API
+    
+    Args:
+        Timestamp in RFC 3339 format.
+
+    Returns:
+        list[dict]: Price data or en error message
+    """
+
+    try:
+        return await fetch_price_data_range(time_range.startTime, time_range.endTime)
+    except ValueError as e:
+        return e
+
+
 
 @router.get("/api/public/data", response_model=RootModel[DataPoint])
 async def get_prices():
@@ -165,22 +207,4 @@ async def get_prices():
         return {"error": f"An error occurred while requesting {exc.request.url}: {str(exc)}"}
     except httpx.HTTPStatusError as exc:
         return {"error": f"HTTP error occurred: {exc.response.status_code} - {exc.response.text}"}
-
-
-@router.post("/api/public/weather", response_model=RootModel[WeatherDataPoint])
-async def post_weather(request: WeatherRequest):
-    """
-    Get weather forecast for a specific UTC time and location (POST version).
-    Fetches weather forecast data from the MET API.
-
-    Args:
-        request (WeatherRequest): Contains latitude, longitude, and timestamp in RFC 3339 format.
-
-    Returns:
-        dict: Weather forecast data or an error message.
-    """
-    try:
-        requested_dt = datetime.fromisoformat(request.timestamp.replace("Z", "+00:00")).replace(tzinfo=timezone.utc)
-        return await fetch_weather_data(request.lat, request.lon, requested_dt)
-    except ValueError:
-        return {"error": "Invalid timestamp format. Expected RFC 3339 format (e.g. 2024-05-05T13:30:00Z)"}
+    
